--- a/RanCyan/RanCyan/Views/RanShikaMainPage.xaml
+++ b/RanCyan/RanCyan/Views/RanShikaMainPage.xaml
@@ -42,7 +42,7 @@
                 <RowDefinition Height="250" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding ShingenLabel.Value}" Grid.Row="0"  />
+            <Label Text="{Binding ShingenLabel.Value}" Grid.Row="0" FontSize = "100" VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanKowashiyaImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ShingenRanCommand}" />
@@ -71,7 +71,7 @@
                 <RowDefinition Height="250" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding KoushinLabel.Value}" Grid.Row="0"  />
+            <Label Text="{Binding KoushinLabel.Value}" Grid.Row="0" FontSize = "150" VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanMikoImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding KoushinRanCommand}" />
@@ -98,15 +98,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*" />
                 <RowDefinition Height="250" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="100" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding SyokugyouLabel.Value}" Grid.Row="0"  />
+            <Label Text="{Binding SyokugyouLabel.Value}" Grid.Row="0" FontSize = "100" VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanKowashiyaImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding SyokugyouRanCommand}" />
                 </Image.GestureRecognizers>
             </Image>
-            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding SyokugyouItems}" ColumnWidth="100" Spacing="4" >
+            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding SyokugyouItems}" ColumnWidth="40" Spacing="4" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ai:ContentCell>
@@ -127,15 +127,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*" />
                 <RowDefinition Height="250" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="100" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding ToubatsuLabel.Value}" Grid.Row="0"  />
+            <Label Text="{Binding ToubatsuLabel.Value}" Grid.Row="0" FontSize = "100" VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanKowashiyaImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ToubatsuRanCommand}" />
                 </Image.GestureRecognizers>
             </Image>
-            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding ToubatsuItems}" ColumnWidth="100" Spacing="4" >
+            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding ToubatsuItems}" ColumnWidth="40" Spacing="4" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ai:ContentCell>
